plugins {
    id 'org.springframework.boot' version '2.4.2'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'


}
sourceCompatibility = 1.8

group = 'com.example'
version = '0.0.1-SNAPSHOT'

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}


task runApp(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    main = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "pharmacy.reference.spring_server.Application"
}


dependencies {

    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    implementation 'org.jetbrains:annotations:20.1.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'

    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.13'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'au.com.bytecode', name: 'opencsv', version: '2.4'

    compile 'org.apache.tika:tika-parsers:1.11'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    compile group: 'org.jamel.dbf', name: 'dbf-reader', version: '0.3.0'
    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'

    compile "org.thymeleaf:thymeleaf-spring4:3.0.2.RELEASE"
    compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
    compile "org.webjars:bootstrap:3.3.7-1"
    compile "org.webjars:jquery:3.2.1"

    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'


}
compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
